pushing new changes to repo

--- a/style.css
+++ b/style.css
@@ -1,10 +1,42 @@
-body{
-background-color:#10ac84;   
-padding: 10px #222f3e;
+:root{
+background-color:#4b4b4b;   
+padding: 0;
+margin: 0;
 }
+#header{
+    background-color: #273c75;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
-.information{
+}
+#title{
+    padding-left: 15px;
+}
+a:hover.nav{
+display: flex;
+padding: 10px;
+justify-content: flex-end;
+/* list-style-type: none; */
+text-align: center;
+margin: 0;
+overflow: hidden;
+border-bottom: 5px solid black;
 
+
+}
+.li{
+    padding: 5px;
+    background-color: #7f8fa6;
+    margin: 5px;
+
+}
+#img{
+display: block;
+margin: auto;
+width: 70%;
+}
+.info{
 
 
 }
