--- a/style.css
+++ b/style.css
@@ -36,12 +36,11 @@ a:hover.nav{
 
 .info{
     display: flex;
-    flex-grow: inherit;
+    border: 20px rgb(25, 122, 122) ;
     align-items: baseline;
-    justify-content: space-evenly;
-    border: 20px azure ;
-    padding: 50px;
+    padding: 30px;
     margin: 20px;
+
 }
 
 #img{
@@ -80,7 +79,7 @@ height: 250px;
     display: inline;
 }
 
-@media screen and (max-width 600px){
+@media only screen and (max-width 600px){
     nav {
         background-color: rgb(106, 161, 111);
     }
