--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 :root{
     background-color:#4b4b4b;   
     padding: 0;
-    margin: 0;
-}
 
+}
+::selection{
+    color: #4834d4;
+    background-color: #e056fd;
+}
+html{
+    font-size: 100%;
+}
 #header{
     background-color: #273c75;
     display: flex;
@@ -13,36 +19,35 @@
 
 #title{
     padding-left: 15px;
+    text-shadow: 3px 3px #686de0;
 }
 
 a:hover.nav{
-    display: flex;
+    /* display: flex; */
     padding: 10px;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     /* list-style-type: none; */
-    text-align: center;
+    /* text-align: center; */
     margin: 0;
     overflow: hidden;
     border-bottom: 5px solid black;
 }
-
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.15rem;
+    line-height: 1.5;
+}
 .container{
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
     flex-basis: content;
     overflow: hidden;
-    justify-content: space-around;
+    justify-content: space-around; */
 }
 
-.info{
-    display: flex;
-    border: 20px rgb(25, 122, 122) ;
-    align-items: baseline;
-    padding: 30px;
-    margin: 20px;
-
+.images{
+    
 }
-
 #img{
     display: block;
     margin: auto;
@@ -50,29 +55,8 @@ a:hover.nav{
     height: auto;
     border: 1px black;
 }
-
-#portfolio{
-width: 250px;
-height: 250px;
-}
-
-#about{
-    width: 250px;
-    height: 250px;
-    
-}
-#contact{
-    width: 250px;
-    height: 250px;
-}
-.li{
-    flex-grow: 3;
-    padding: 5px;
-    background-color: #7f8fa6;
-    margin: 5px;
-    justify-content: space-between;
-    padding: 30px 15px white;
-    border: 30px 15px black;
+.info{
+    display: flex;
 }
 
 #text{
