--- a/style.css
+++ b/style.css
@@ -34,20 +34,10 @@ a:hover.nav{
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.15rem;
+    font-size: 1.0rem;
     line-height: 1.5;
 }
-.container{
-    /* display: flex;
-    flex-wrap: wrap;
-    flex-basis: content;
-    overflow: hidden;
-    justify-content: space-around; */
-}
 
-.images{
-    
-}
 #img{
     display: block;
     margin: auto;
@@ -55,16 +45,29 @@ body {
     height: auto;
     border: 1px black;
 }
+.container{
+    justify-content: center;
+    align-items: center;
+}
 .info{
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+    border: 30px #95afc0;
 }
 
-#text{
-    display: inline;
+.content{
+    padding: 10px;
+    border: 10px #95afc0;
 }
+
+
+
 
 @media only screen and (max-width 600px){
-    nav {
-        background-color: rgb(106, 161, 111);
+        nav {
+            background-color: rgb(106, 161, 111);
+        }
     }
-}
