--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ body {
 .images{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
     border-radius: 25px;
 }
@@ -68,8 +70,8 @@ body {
     margin: auto;
 }
 .container{
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
 }
 .info{
     display: grid;
